Test/linear/Linear0.dfy.expect
Linear0.dfy(65,4): Error: expected linear expression, found ordinary expression
Linear0.dfy(70,4): Error: expected ordinary expression, found linear expression
Linear0.dfy(73,45): Error: linear variable must be unavailable at function exit
Linear0.dfy(80,4): Error: expected ordinary expression, found linear expression
Linear0.dfy(80,11): Error: expected ordinary expression, found linear expression
Linear0.dfy(80,9): Error: expected linear expression, found ordinary expression
Linear0.dfy(85,4): Error: expected linear expression, found ordinary expression
Linear0.dfy(90,15): Error: linear variable is unavailable here
Linear0.dfy(93,28): Error: linear variable must be unavailable at function exit
Linear0.dfy(101,9): Error: expected linear expression, found ordinary expression
Linear0.dfy(108,9): Error: expected ordinary expression, found linear expression
Linear0.dfy(109,12): Error: expected linear expression, found ordinary expression
Linear0.dfy(109,11): Error: expected ordinary expression, found linear expression
Linear0.dfy(112,36): Error: linear variable must be unavailable at method exit
Linear0.dfy(119,58): Error: linear variable must be assigned at method exit
Linear0.dfy(126,29): Error: linear variable must be assigned at method exit
Linear0.dfy(133,20): Error: linear variable is unavailable here
Linear0.dfy(136,19): Error: linear variable must be unavailable at method exit
Linear0.dfy(144,8): Error: expected shared expression, found linear expression
Linear0.dfy(150,7): Error: expected linear expression, found shared expression
Linear0.dfy(157,24): Error: expected shared variable, found linear variable (cannot borrow variable because method returns a shared result)
Linear0.dfy(163,22): Error: linear variable is unavailable here
Linear0.dfy(163,22): Error: expected ordinary expression, found linear expression
Linear0.dfy(161,22): Error: linear variable must be unavailable at method exit
Linear0.dfy(168,22): Error: shared variable is out of scope here
Linear0.dfy(168,22): Error: expected ordinary expression, found shared expression
26 resolution/type errors detected in Linear0.dfy
